--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
  }
 
 body {
-    background-color: gray;
+    background-image: linear-gradient(to left, rgb(66, 66, 66), rgb(255, 255, 255));
 }
 
 header {
