--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
     background-image: linear-gradient(to left, rgb(66, 66, 66), rgb(255, 255, 255));
 }
 
+nav {
+    background-image: linear-gradient(to left, rgb(66, 66, 66), rgb(255, 255, 255));
+}
+/*
 header {
     width: 100%;
     height: 50px;
@@ -46,6 +50,7 @@ section {
 }
 
 /* empieza menu hamburguesa */
+/*
 #menu-bar {
     display: none;
 }
@@ -86,7 +91,7 @@ header label {
 }
 
 /* media querie menu */
-
+/*
 @media screen and (min-width: 1024px) {
     .menu {
         position: static;
@@ -113,7 +118,11 @@ header label {
 
 /* EMPIEZA MAIN */
 
-#banner {
+
+
+/* foto  principal index */
+
+/* #banner {
     margin-top: 50px;
     position: relative;
 }
@@ -137,6 +146,7 @@ header label {
     font-size: 60px;
 }
 
+*/
 .modelos-destacados {
     text-align: center;
     font-size: 40px;
@@ -148,6 +158,10 @@ header label {
         font-size: 25px;
     }
 }
+
+ 
+
+
 
 
 /* EMPIEZA CUERPO */
