--- a/sass/_font.scss
+++ b/sass/_font.scss
@@ -2,9 +2,12 @@ $textAlign: center;
 $padding: 1rem;
 $fontSizeH1: 3rem;
 $fontSizeP: 20px;
+$fontSizeH3: 1rem;
+
 
 $mobile: 576px;
 $tablet: 768px;
 $desktop: 1200px;
 
 $gradiente:linear-gradient(to left, rgb(156, 156, 156), rgb(255, 255, 255));
+$red: rgb(255, 0, 0)
