--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 
 @import 'font';
+@import 'variables';
 
 
 *{
@@ -33,9 +34,7 @@ nav {
 /* EMPIEZA CUERPO */
  
 .h2-modelos {
-    text-align: center;
-    font-size: 50px;
-    padding-top: 50px;
+    @include titulo;
 }
 
 
@@ -104,6 +103,9 @@ nav {
     width: 110%;
 }
 
+
+
+
 /* footer */
 footer {
     background-color: rgb(179, 176, 176);
@@ -111,36 +113,137 @@ footer {
     padding: 30px;
 }
 
-footer .contenedor {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-bottom: 25px;
-}
-
 .copy {
     font-size: 20px;
-}
-
-.sociales {
-    width: 100%;
     text-align: center;
-    font-size: 28px; 
+    margin-top: 30px;
+    font-size: 1rem;
+    text-decoration: underline;
+    
 }
 
-.sociales a {
-    color: #333;
+
+.container-footer-all {
+    width: 100%;   
+    margin: auto;  
+    max-width: 1600px;
+    
+}
+
+.container-body {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.colum1 {
+    max-width: 400px;
+    p{
+        text-align: left;
+        margin-top: 20px;
+    }
+    
+}
+
+.colum2 {
+    max-width: 400px;
+    .row {
+        margin-top: 20px;
+        display: flex;
+    }
+    a {
+        text-decoration: none;
+        color: black;
+    }
+}
+
+.colum3 {
+    max-width: 400px;
+        label {
+        text-align: left;
+        margin-top: 20px;
+        
+    }
+    
+}
+
+@each $nombre, $valor in $redes {
+    .icon-#{$nombre} {
+        color: $valor;
+    }
+}
+
+/* Trayendo maps de partial _variables */
+.colum2 {
+    .fb {
+        color: map-get($redes, fb);
+    }
+    .tt {
+        color: map-get($redes, tt);
+    }
+    .ig {
+        color: map-get($redes, ig);
+    }
+    .yt {
+        color: map-get($redes, yt);
+    }
+}
+
+/* aplicando extend en forma de boton en "redes sociales" */
+
+.redes-soc {
+    display: inline;
+    width: 200px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+    
+}
+
+.redes-soc--gris {
+    @extend .redes-soc;
+    background-color: rgb(153, 152, 152);
+}
+
+
+.info-contacto {
+    display: inline;
+    width: 200px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 30px;
+    color: rgb(0, 0, 0)
+}
+
+.info-contacto--gris {
+    @extend .redes-soc;
+    background-color: rgb(153, 152, 152);
+}
+
+.info-contacto {
+    color: black;
+    text-decoration: none;
+    background-color: rgb(153, 152, 152);
+}
+
+
+.sobreNos {
+    display: inline;
+    width: 200px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 30px;
+    color: rgb(0, 0, 0)
+}
+
+.sobreNosGris {
+    @extend .sobreNos;
+    background-color: rgb(153, 152, 152);
     text-decoration: none;
 }
 
-@media screen and (min-width:768px) {
-    .sociales {
-        width: auto;
-    }
-    footer .contenedor {
-        justify-content: space-between;
-    }
-}
+
 
 /* PRUEBA */
 section {
@@ -292,64 +395,10 @@ div .bc-text {
     
 }
 
-
-/* empieza bicicletas */
-/* #comparacion {
-    padding: 20px;
-    margin-left: 800px;
-    text-decoration: underline;
-
-}
- */
-
-
-
-/* .tabla {
-    margin: 20px;
-    border: 3px solid;
-}
-
-.fotos {
-    display: flex;
-    flex-wrap: wrap;
-    
-}
-
-.fotos .dh img {
-    width: 600px;
-    height: 400px;
-    margin: 10px;
-    border-radius: 30px;
-    box-shadow: 5px 8px 12px black;
-}
-.fotos .ruta img {
-    width: 600px;
-    height: 400px;
-    margin: 10px;
-    border-radius: 30px;
-    box-shadow: 5px 8px 12px black;
-}
-.fotos .ebike img {
-    width: 600px;
-    height: 400px;
-    margin: 10px;
-    border-radius: 30px;
-    box-shadow: 5px 8px 12px black;
-}
-.fotos .dirt img {
-    width: 600px;
-    height: 400px;
-    margin: 10px;
-    border-radius: 30px;
-    box-shadow: 5px 8px 12px black;
-} */
-
 /* empieza equipamiento */
 #equipamiento {
-    padding: 20px;
-    margin: 20px;
-    text-align: center;
-    font-size: 50px;
+    @include titulo;
+    margin-top: 50px;
     
 }
 
@@ -437,7 +486,9 @@ div .bc-text {
 
 .header-equipamiento {
     text-align: center;
-   
+    
+
+    
 }
 
 /*EMPIEZA EVENTOS  */
@@ -477,6 +528,7 @@ div .bc-text {
     column-gap: 50px;
     width: 120%;
     align-items: start; 
+    padding-bottom: 50px;
        
 }
 
